EsferixisMusicFrameworkNative/EMFB_STK/include/EMFB_STK_ONEZERO.h

#pragma once

#include "EMFB_STK_COMMON.h"

EMFB_STK_API void * emfb_stk_onezero_new(char **exception_desc, double theZero);

EMFB_STK_API void emfb_stk_onezero_delete(void *self);

EMFB_STK_API void emfb_stk_onezero_setGain(void *self, double gain);

EMFB_STK_API void emfb_stk_onezero_setB0(void *self, double b0);

EMFB_STK_API void emfb_stk_onezero_setB1(void *self, double b1);

EMFB_STK_API void emfb_stk_onezero_setCoefficients(void *self, double b0, double b1, int clearState);

EMFB_STK_API void emfb_stk_onezero_setZero(void *self, double theZero);

EMFB_STK_API void emfb_stk_onezero_tickInplace(void *self, void *frames, unsigned int channel);

EMFB_STK_API void emfb_stk_onezero_tick(void *self, void *iFrames, void *oFrames, unsigned int iChannel, unsigned int oChannel);

EMFB_STK_API void emfb_stk_onezero_tickSubInplace(void *self, void *frames, unsigned int offset, unsigned int length, unsigned int channel);

EMFB_STK_API void emfb_stk_onezero_tickSub(void *self, void *iFrames, void *oFrames, unsigned int iOffset, unsigned int oOffset, unsigned int length, unsigned int iChannel, unsigned int oChannel);